# security_log_analysis_rust

./: Cargo.toml  Dockerfile.build.ubuntu16.04  Dockerfile.build.ubuntu18.04  Dockerfile.test.ubuntu18.04  Makefile  README.md
.github/workflows/: rust.yml
migrations/: V01__host_country.sql  V02__country_code.sql  V03__intrusion_log.sql  V06__host_country_created_at.sql  V07__log_messages.sql  V08__log_messages_is_processed.sql  V09__integer_to_uuid.sql  V10__key_item_cache.sql
migrations/2019-06-28-023740_host_country/: down.sql  up.sql
migrations/2019-06-28-023745_country_code/: down.sql  up.sql
migrations/2019-06-28-023903_intrusion_log/: up.sql
migrations/2020-10-16-163310_host_country_foreign_key/: down.sql  up.sql
scripts/: Dockerfile  backup_db.sh  bootstrap_db.sh  build_deb_docker.sh  clear_db.sh  openapi.yaml  restore_db.sh
src/: config.rs  errors.rs  host_country_metadata.rs  iso_8601_datetime.rs  lib.rs  logged_user.rs  main.rs  models.rs  parse_logs.rs  parse_opts.rs  pgpool.rs  pgpool_pg.rs  polars_analysis.rs  polars_main.rs  reports.rs  s3_sync.rs  schema.rs  security_log_element.rs  security_log_http.rs  ses_client.rs  stack_string.rs
templates/: COUNTRY_TEMPLATE.html  map_script.js
tests/data/: test_systemd.json
