[package]
name = "security_log_analysis_rust"
version = "0.12.1"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[package.metadata.deb]
name = "security-log-analysis-rust"
priority = "optional"
section = "rust"
provides = "security-log-analysis-rust"
extended-description = """\
Analyze Auth Logs."""

[dependencies]
anyhow = "1.0"
authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.12.1"}
aws-config = {version="1.0", features=["behavior-version-latest"]}
aws-sdk-s3 = "1.1"
aws-sdk-ses = "1.1"
bytes = "1.0"
cached = {version="0.54", features=["async", "async_tokio_rt_multi_thread"]}
chrono = "0.4"
clap = {version="4.0", features=["derive"]}
deadpool = {version = "0.12", features=["serde", "rt_tokio_1"]}
deadpool-postgres = {version="0.14", features=["serde"]}
deadqueue = "0.2"
derive_more = {version="1.0", features = ["full"]}
dioxus = "0.5"
dioxus-core = "0.5"
dioxus-ssr = "0.5"
dirs = "5.0"
dotenvy = "0.15"
envy = "0.4"
env_logger = "0.11"
flate2 = "1.0"
futures = "0.3"
glob = "0.3"
itertools = "0.13"
log = "0.4"
maplit = "1.0"
parking_lot = "0.12"
polars = {version="0.44", features=["temporal", "parquet", "lazy"]}
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
rand = "0.8"
rayon = "1.5"
refinery = {version="0.8", features=["tokio-postgres"]}
reqwest = {version="0.12", features=["json", "rustls-tls"], default-features=false}
serde = { version="1.0", features=["derive"]}
serde_json = "1.0"
serde_yml = "0.0.12"
smallvec = "1.6"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types", "rweb-openapi"], tag="1.0.2" }
stdout-channel = "0.6"
thiserror = "2.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
time-tz = {version="2.0", features=["system"]}
tokio-postgres = {version="0.7", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
tokio = {version="1.41", features=["rt", "macros", "rt-multi-thread"]}
rweb = {git = "https://github.com/ddboline/rweb.git", features=["openapi"], default-features=false, tag="0.15.2"}
rweb-helper = { git = "https://github.com/ddboline/rweb_helper.git", tag="0.5.3" }
uuid = { version = "1.0", features = ["serde", "v4"] }

[[bin]]
name = "security-log-parse-rust"
path = "src/main.rs"
doc = false

[[bin]]
name = "security-log-http"
path = "src/security_log_http.rs"
doc = false
