[package]
name = "security_log_analysis_rust"
version = "0.13.2"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[package.metadata.deb]
name = "security-log-analysis-rust"
priority = "optional"
section = "rust"
provides = "security-log-analysis-rust"
extended-description = """\
Analyze Auth Logs."""

[dependencies]
anyhow = "1.0"
authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.13.1"}
aws-config = {version="1.6", features=["behavior-version-latest"]}
aws-sdk-s3 = "1.82"
aws-sdk-ses = "1.67"
axum = { version = "0.8", features = ["multipart"] }
axum-extra = {version="0.10", features=["cookie"]}
bytes = "1.10"
cached = {version="0.55", features=["async", "async_tokio_rt_multi_thread"]}
chrono = "0.4"
clap = {version="4.5", features=["derive"]}
deadpool = {version = "0.12", features=["serde", "rt_tokio_1"]}
deadpool-postgres = {version="0.14", features=["serde"]}
deadqueue = "0.2"
derive_more = {version="2.0", features = ["full"]}
dioxus = "0.6"
dioxus-core = "0.6"
dioxus-ssr = "0.6"
dirs = "6.0"
dotenvy = "0.15"
envy = "0.4"
env_logger = "0.11"
flate2 = "1.1"
futures = "0.3"
glob = "0.3"
itertools = "0.14"
log = "0.4"
maplit = "1.0"
mime = "0.3"
parking_lot = "0.12"
polars = {version="0.46", features=["temporal", "parquet", "lazy"]}
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
rand = "0.9"
rayon = "1.5"
refinery = {version="0.8", features=["tokio-postgres"]}
reqwest = {version="0.12", features=["json", "rustls-tls"], default-features=false}
serde = { version="1.0", features=["derive"]}
serde_json = "1.0"
serde_yml = "0.0.12"
smallvec = "1.6"
stack-string = { version="1.1", features=["postgres_types", "utoipa_types", "axum_types"] }
stdout-channel = "0.6"
thiserror = "2.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
time-tz = {version="2.0", features=["system"]}
tokio-postgres = {version="0.7", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
tokio = {version="1.44", features=["rt", "macros", "rt-multi-thread"]}
tower-http = {version="0.6", features=["cors"]}
utoipa = { version = "5.3", features = ["axum_extras", "yaml", "time", "uuid", "smallvec", "url", "openapi_extensions", "decimal"] }
utoipa-helper = "0.1"
utoipa-axum = { version = "0.2" }
uuid = { version = "1.0", features = ["serde", "v4"] }

[[bin]]
name = "security-log-parse-rust"
path = "src/main.rs"
doc = false

[[bin]]
name = "security-log-http"
path = "src/security_log_http.rs"
doc = false
